<resources>
    <string name="app_name">Journal</string>
    <string name="main_title">Welcome to our Journal App</string>
    <string name="main_hint_email">Email</string>
    <string name="main_hint_password">Password</string>
    <string name="main_btn_login">Login</string>
    <string name="main_btn_register">Register</string>
    <string name="hint_sign_up_username">Username</string>
    <string name="tv_sign_up_title">Create an account</string>
    <string name="btn_sign_up_txt">Sign up</string>
    <string name="tv_journal_no_posts">No Posts</string>
</resources>